--- a/src/main/resources/templates/listing.html
+++ b/src/main/resources/templates/listing.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tasks List</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
-
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Status: </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-
-                        <!-- <a 
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Status: </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDarkDropdown"
+          aria-controls="navbarNavDarkDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <!-- <a 
                             class="nav-link dropdown-toggle" 
                             href="#" 
                             id="navbarDarkDropdownMenuLink" 
@@ -39,59 +46,67 @@
                   <li><a class="dropdown-item" href="#">Completed</a></li>
                 </ul> -->
 
-                        <select class="form-select">
-                            <option value="all">Show All</option>
-                            <option value="pending">Pending</option>
-                            <option value="started">Started</option>
-                            <option value="in_progress">In-Progress</option>
-                            <option value="completed">Completed</option>
-                        </select>
-                    </li>
-                </ul>
-            </div>
-            <a href="/add">
-                <button type="button" class="btn btn-success">Add Task</button>
-            </a>
+              <select class="form-select">
+                <option value="all">Show All</option>
+                <option value="pending">Pending</option>
+                <option value="started">Started</option>
+                <option value="in_progress">In-Progress</option>
+                <option value="completed">Completed</option>
+              </select>
+            </li>
+          </ul>
         </div>
+        <a href="/add">
+          <button type="button" class="btn btn-success">Add Task</button>
+        </a>
+      </div>
     </nav>
 
     <div>
-        <table class="table table-striped">
-            <tr>
-                <th>Name</th>
-                <th>Desription</th>
-                <th>Due Date</th>
-                <th>Priority</th>
-                <th>Status</th>
-                <th>Created At</th>
-                <th>Updated At</th>
-                <th colspan="2" align="center">Actions</th>
-            </tr>
-            <tr th:each="t : ${tasks}">
-                <td th:text="${t.name}"></td>
-                <td th:text="${t.description}"></td>
-                <td th:text="${#dates.format(t.dueDate, 'dd MMM yyyy')}"></td>
-                <td th:text="${t.priority}"></td>
-                <td th:text="${t.status}"></td>
-                <td th:text="${#dates.format(t.createdAt, 'dd MMM yyyy')}"></td>
-                <td th:text="${#dates.format(t.updatedAt, 'dd MMM yyyy')}"></td>
-                <td>
-                    <a href="/update">
-                        <button type="button" class="btn btn-warning btn-sm">Update</button>
-                    </a>
-                </td>
-                <td>
-                    <a href="/delete">
-                        <button type="button" class="btn btn-danger btn-sm">Delete</button>
-                    </a>
-                </td>
-            </tr>
-        </table>
+      <table class="table table-striped">
+        <tr>
+          <th>Name</th>
+          <th>Desription</th>
+          <th>Due Date</th>
+          <th>Priority</th>
+          <th>Status</th>
+          <th>Created At</th>
+          <th>Updated At</th>
+          <th colspan="2" align="center">Actions</th>
+        </tr>
+        <tr th:each="t : ${tasks}">
+          <td th:text="${t.name}"></td>
+          <td th:text="${t.description}"></td>
+          <td th:text="${#dates.format(t.dueDate, 'dd MMM yyyy')}"></td>
+          <td th:text="${t.priority}"></td>
+          <td th:text="${t.status}"></td>
+          <td th:text="${#dates.format(t.createdAt, 'dd MMM yyyy')}"></td>
+          <td th:text="${#dates.format(t.updatedAt, 'dd MMM yyyy')}"></td>
+          <td>
+            <form action="/update" method="post">
+              <!-- hidden object here so form knows which object to pass back into post request -->
+              <input type="hidden" th:object="${t}">
+              <button type="submit" class="btn btn-warning btn-sm">
+                Update
+              </button>
+            </form>
+          </td>
+          <td>
+            <form action="/delete" method="post">
+              <!-- hidden object here so form knows which object to pass back into post request -->
+              <button type="submit" class="btn btn-danger btn-sm">
+                Delete
+              </button>
+            </form>
+          </td>
+        </tr>
+      </table>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
