--- a/src/main/resources/templates/listing.html
+++ b/src/main/resources/templates/listing.html
@@ -75,11 +75,11 @@
           <th colspan="2" align="center">Actions</th>
         </tr>
         <tr th:each="t : ${tasks}">
-          <td th:text="${t.name}"></td>
-          <td th:text="${t.description}"></td>
+          <td th:text="${#strings.capitalize(t.name)}"></td>
+          <td th:text="${#strings.capitalize(t.description)}"></td>
           <td th:text="${#dates.format(t.dueDate, 'dd MMM yyyy')}"></td>
-          <td th:text="${t.priority}"></td>
-          <td th:text="${t.status}"></td>
+          <td th:text="${#strings.capitalize(t.priority)}"></td>
+          <td th:text="${#strings.capitalize(t.status).replaceAll('[^A-Za-z0-9\-]', ' ')}"></td>
           <td th:text="${#dates.format(t.createdAt, 'dd MMM yyyy')}"></td>
           <td th:text="${#dates.format(t.updatedAt, 'dd MMM yyyy')}"></td>
           <td>
