--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,71 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Update Task</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
-
+  <body>
     <div>
-        <h1>Update To-Do Task</h1>
-        <br>
-        <form action="/add" method="post" th:object="${task}">
-            <table class="table">
-                <tr>
-                    <th>Name</th>
-                    <td><input type="text" name="name" th:field="*{name}" size="30">
-                        <span style="color: red" th:errors="*{name}"></span>
-                    </td>
-                </tr>
-                <tr>
-                    <th>Description</th>
-                    <td>
-                        <input type="text" name="description" th:field="*{description}" size="30">
-                        <span style="color: red" th:errors="*{description}"></span>
-                    </td>
-                </tr>
-                <tr>
-                    <th>Due Date</th>
-                    <td>
-                        <input type="date" name="dueDate" th:field="*{dueDate}">
-                        <span style="color: red" th:errors="*{dueDate}"></span>
-                    </td>
-                </tr>
-                <tr>
-                    <th>Priority</th>
-                    <td>
-                        <select name="priority" th:field="*{priority}">
-                            <option value="low">Low</option>
-                            <option value="medium">Medium</option>
-                            <option value="high">High</option>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <th>Status</th>
-                    <td>
-                        <select name="status" th:field="*{status}">
-                            <option value="pending">Pending</option>
-                            <option value="started">Started</option>
-                            <option value="in_progress">In-Progress</option>
-                            <option value="completed">Completed</option>
-                        </select>
-                    </td>
-                </tr>
-            </table>
-            <br>
-            <button type="submit" class="btn btn-primary">Add Task</button>
-        </form>
+      <h1>Update To-Do Task</h1>
+      <br />
+      <form action="/update" method="post" th:object="${task}">
+        <table class="table">
+          <tr>
+            <th>Name</th>
+            <td>
+              <input type="text" name="name" th:field="*{name}" size="50" />
+              <span style="color: red" th:errors="*{name}"></span>
+            </td>
+          </tr>
+          <tr>
+            <th>Description</th>
+            <td>
+              <textarea
+                name="description"
+                th:field="*{description}"
+                cols="53"
+                rows="4"
+              ></textarea>
+              <span style="color: red" th:errors="*{description}"></span>
+            </td>
+          </tr>
+          <tr>
+            <th>Due Date</th>
+            <td>
+              <input type="date" name="dueDate" th:field="*{dueDate}" />
+              <span style="color: red" th:errors="*{dueDate}"></span>
+            </td>
+          </tr>
+          <tr>
+            <th>Priority</th>
+            <td>
+              <select name="priority" th:field="*{priority}">
+                <option value="low">Low</option>
+                <option value="medium">Medium</option>
+                <option value="high">High</option>
+              </select>
+            </td>
+          </tr>
+          <tr>
+            <th>Status</th>
+            <td>
+              <select name="status" th:field="*{status}">
+                <option value="pending">Pending</option>
+                <option value="started">Started</option>
+                <option value="in_progress">In-Progress</option>
+                <option value="completed">Completed</option>
+              </select>
+            </td>
+          </tr>
+        </table>
+        <br />
+        <input type="hidden" name="id" th:field="*{id}" />
+        <input type="hidden" name="createdAt" th:field="*{createdAt}" th:value="*{createdAt}" />
+        <input type="hidden" name="updatedAt" th:field="*{updatedAt}" />
+        <button type="submit" class="btn btn-primary">Update Task</button>
+      </form>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
