--- a/src/main/resources/templates/listing.html
+++ b/src/main/resources/templates/listing.html
@@ -65,7 +65,7 @@
     <div>
       <table class="table table-striped">
         <thead>
-          <tr>
+          <tr style="vertical-align: middle">
             <th>Name</th>
             <th>Desription</th>
             <th>Due Date</th>
